--- a/clover/src/app/components/sing-in/sing-in.component.html
+++ b/clover/src/app/components/sing-in/sing-in.component.html
@@ -1,1 +1,55 @@
-<p>sing-in works!</p>
+<div class="view" style="background-image: url('http://mdbootstrap.com/img/Photos/Others/images/91.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
+    <div class="mask rgba-gradient d-flex justify-content-center align-items-center">
+        <div class="container">
+
+            <div class="row mt-5">
+                <div class="white-text text-md-left" style="width: 500px; margin-top: 100px;"> 
+                    <h1 class="h1-responsive font-weight-bold wow fadeInLeft" data-wow-delay="0.3s">Sign up right now! </h1>
+                    <hr class="hr-light wow fadeInLeft" data-wow-delay="0.3s">
+                    <h6 class="mb-3 wow fadeInLeft" data-wow-delay="0.3s">Text Text Text Text Text Text Text Text Text Text Text Text Text Text 
+                        Text Text Text Text Text Text Text Text Text Text Text Text </h6>
+                    <a class="btn btn-outline-white wow fadeInLeft" data-wow-delay="0.3s">Learn more</a>
+                </div>
+            
+                <form class="fixed-top" style="color: #757575;" style="margin-left: 800px; margin-right: 300px; margin-top: 150px;">
+                    <div class="md-form">
+                        <input type="email" id="materialLoginFormEmail" class="form-control" mdbInput>
+                        <label for="materialLoginFormEmail">E-mail</label>
+                    </div>
+
+                    <div class="md-form">
+                        <input type="password" id="materialLoginFormPassword" class="form-control" mdbInput>
+                        <label for="materialLoginFormPassword">Password</label>
+                    </div>
+
+                    <div class="d-flex justify-content-around">
+                        <div>
+                            <a href="">Remember me</a>
+                        </div>
+                        <div> 
+                            <a href="">Forgot password?</a></div>
+                        </div>
+
+                    <button mdbBtn color="info" outline="true" rounded="true" block="true" class="my-4 waves-effect z-depth-0" mdbWavesEffect
+                    type="submit">Sign in</button>
+
+                    <p> Not a member? <a routerLink="/sing-up">Register</a></p>
+
+                    <p>or sign in with:</p>
+                    <a type="button" mdbBtn floating="true" color="fb" size="sm">
+                    <!--<mdb-icon fab icon="facebook"></mdb-icon>-->
+                    </a>
+                    <a type="button" mdbBtn floating="true" color="tw" size="sm">
+                    <!--<mdb-icon fab icon="twitter"></mdb-icon>-->
+                    </a>
+                    <a type="button" mdbBtn floating="true" color="li" size="sm">
+                    <!--<mdb-icon fab icon="linkedin"></mdb-icon>-->
+                    </a>
+                    <a type="button" mdbBtn floating="true" color="git" size="sm">
+                    <!--<mdb-icon fab icon="github"></mdb-icon>-->
+                    </a>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
