--- a/clover/src/app/components/sing-in/sing-in.component.html
+++ b/clover/src/app/components/sing-in/sing-in.component.html
@@ -31,8 +31,8 @@
                         </div>
 
                     <button mdbBtn color="info" outline="true" rounded="true" block="true" class="my-4 waves-effect z-depth-0" mdbWavesEffect
-                    type="submit">Sign in</button>
-
+                    type="submit" (click)=becomeAUser()>Sign in</button>
+                        
                     <p> Not a member? <a routerLink="/sing-up">Register</a></p>
 
                     <p>or sign in with:</p>
