--- a/clover/src/app/app.component.html
+++ b/clover/src/app/app.component.html
@@ -15,7 +15,7 @@
         <a class="nav-link" routerLink="">Flights</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="">Cars</a>
+        <a class="nav-link" routerLink="car">Cars</a>
       </li>
     </ul>
     <form class="form-inline">
