--- a/clover/src/app/components/sing-in/sing-in.component.css
+++ b/clover/src/app/components/sing-in/sing-in.component.css
@@ -1,4 +1,8 @@
-body, html {
+  .text{
+      color: aliceblue;
+  }
+
+  body, html {
     background-attachment: fixed;
         background-size: cover;
         display: flex;
@@ -16,7 +20,155 @@ body, html {
     background-repeat: no-repeat;
     background-size: cover;
   }
-
-  .text{
-      color: aliceblue;
-  }
+  
+  
+  
+  
+  p {
+    margin-bottom: 0px;
+    font-size: 15px;
+    color: #777; }
+  
+  h2 {
+    margin: 0;
+    padding: 0;
+    font-weight: 900;
+    color: #222;
+    font-family: 'Montserrat';
+    font-size: 24px;
+    text-transform: uppercase;
+    text-align: center;}
+  
+  
+  
+  .container {
+    width: 550px;
+    position: relative;
+    margin-top: -250px;
+    margin-right: 100px;}
+  
+  
+  .position-center {
+    position: absolute;
+    top: 50%;
+    left: 20%;}
+  
+  .signup-content {
+    background: #fff;
+    border-radius: 10px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -o-border-radius: 10px;
+    -ms-border-radius: 10px;
+    padding: 25px 25px; }
+  
+  .form-group {
+    overflow: hidden;
+    margin-bottom: 20px; }
+  
+  .form-input {
+    width: 100%;
+    border: 1px solid #ebebeb;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -o-border-radius: 5px;
+    -ms-border-radius: 5px;
+    padding: 17px 20px;
+    box-sizing: border-box;
+    font-size: 14px;
+    font-weight: 500;
+    color: #222; }
+    .form-input::-webkit-input-placeholder {
+      color: #999; }
+    .form-input::-moz-placeholder {
+      color: #999; }
+    .form-input:-ms-input-placeholder {
+      color: #999; }
+    .form-input:-moz-placeholder {
+      color: #999; }
+    .form-input::-webkit-input-placeholder {
+      font-weight: 500; }
+    .form-input::-moz-placeholder {
+      font-weight: 500; }
+    .form-input:-ms-input-placeholder {
+      font-weight: 500; }
+    .form-input:-moz-placeholder {
+      font-weight: 500; }
+    .form-input:focus {
+      border: 1px solid transparent;
+      -webkit-border-image-source: -webkit-linear-gradient(to right, #9face6, #74ebd5);
+      -moz-border-image-source: -moz-linear-gradient(to right, #9face6, #74ebd5);
+      -o-border-image-source: -o-linear-gradient(to right, #9face6, #74ebd5);
+      border-image-source: linear-gradient(to right, #9face6, #74ebd5);
+      -webkit-border-image-slice: 1;
+      border-image-slice: 1;
+      border-radius: 5px;
+      -moz-border-radius: 5px;
+      -webkit-border-radius: 5px;
+      -o-border-radius: 5px;
+      -ms-border-radius: 5px;
+      background-origin: border-box;
+      background-clip: content-box, border-box; }
+      .form-input:focus::-webkit-input-placeholder {
+        color: #222; }
+      .form-input:focus::-moz-placeholder {
+        color: #222; }
+      .form-input:focus:-ms-input-placeholder {
+        color: #222; }
+      .form-input:focus:-moz-placeholder {
+        color: #222; }
+  
+  .form-submit {
+    width: 100%;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -o-border-radius: 5px;
+    -ms-border-radius: 5px;
+    padding: 17px 20px;
+    box-sizing: border-box;
+    font-size: 14px;
+    font-weight: 700;
+    color: #fff;
+    text-transform: uppercase;
+    border: none;
+    background-image: -moz-linear-gradient(to left, #74ebd5, #9face6);
+    background-image: -ms-linear-gradient(to left, #74ebd5, #9face6);
+    background-image: -o-linear-gradient(to left, #74ebd5, #9face6);
+    background-image: -webkit-linear-gradient(to left, #74ebd5, #9face6);
+    background-image: linear-gradient(to left, #74ebd5, #9face6); }
+  
+  
+  
+  .label-agree-term {
+    font-size: 12px;
+    font-weight: 600;
+    color: #555; }
+  
+    .fa {
+      padding: 20px;
+      font-size: 30px;
+      width: 50px;
+      text-align: center;
+      text-decoration: none;
+    }
+    
+    /* Add a hover effect if you want */
+    .fa:hover {
+      opacity: 0.7;
+    }
+    
+    /* Set a specific color for each brand */
+    
+    /* Facebook */
+    .fa-facebook {
+      background: #3B5998;
+      color: white;
+    }
+    
+    /* Twitter */
+    .fa-twitter {
+      background: #55ACEE;
+      color: white;
+    }
