--- a/clover/src/app/components/sing-in/sing-up/sing-up.component.html
+++ b/clover/src/app/components/sing-in/sing-up/sing-up.component.html
@@ -1,79 +1,66 @@
-<form [formGroup]="singUpForm" (ngSubmit)="onSubmit()" class="text-center" style="color: #757575;" style="margin-left: 550px; margin-right: 550px; margin-top: 50px;">
-  
-        <div class="form-row">
-          <div class="col">
-            <div class="md-form">
-              <input type="text" id="FirstName" class="form-control" formControlName="FirstName">
-              <label for="FirstName">First name</label>
-              <div *ngIf="singUpForm.controls.FirstName.invalid">
-                Please enter First name
-            </div>
-            </div>
-          </div>
+<body>
+  <div class="bg">
+<div class="main">
 
-          <div class="col">
-            <div class="md-form">
-              <input type="email" id="LastName" class="form-control" formControlName="LastName">
-              <label for="LastName">Last name</label>
-              <div *ngIf="singUpForm.controls.LastName.invalid">
-                Please enter Last name
-            </div>
-            </div>
-          </div>
-        </div>
-  
-        <div class="md-form mt-0">
-          <input type="email" id="Email" class="form-control" formControlName="Email">
-          <label for="Email">E-mail</label>
-          <div *ngIf="singUpForm.controls.Email.invalid">
-            Please enter Email
-        </div>
-        </div>
-  
-        <div class="md-form">
-          <input type="password" id="Password" class="form-control" formControlName="Password">
-          <label for="Password">Password</label>
-          <div *ngIf="singUpForm.controls.Password.invalid">
-            Please enter Password
-        </div>
-        </div>
+  <section class="signup">
+      <div class="container">
+          <div class="signup-content">
+              <form [formGroup]="singUpForm" (ngSubmit)="onSubmit()" method="POST" id="signup-form" class="signup-form">
+                <h2 class="form-title">Create account</h2>
 
-        <div class="md-form">
-          <input type="password" id="ReenterPassword" class="form-control" formControlName="Password">
-          <label for="ReenterPassword">Re-enter Password</label>
-          <div *ngIf="singUpForm.controls.Password.invalid">
-            Please enter Password
-        </div>
-        </div>
-      
-      <div class="md-form">
-        <select id="Gener" formControlName="state" class="form-control" formControlName="Gener">
-          <option value="Male">Male</option>
-          <option value="Female">Female</option>
-          <option value="Other">Other</option>
-        </select>
-        <label for="Gener">Gener</label>
-        <div *ngIf="singUpForm.controls.Gener.invalid">
-          Please enter Gener
+                  <div class="form-group">
+                      <input type="text" id="FirstName" class="form-input" formControlName="FirstName" placeholder="Your Name"/>
+                      <div *ngIf="singUpForm.controls.FirstName.invalid">
+                        <!--Please enter First name-->
+                    </div>
+                  </div>
+
+                  <div class="form-group">
+                    <input type="mail" id="Email" class="form-input" formControlName="Email" placeholder="Mail"/>
+                    <div *ngIf="singUpForm.controls.Email.invalid">
+                      <!--Please enter Email-->
+                  </div>
+                  </div>
+
+                  <div class="form-group">
+                    <input type="password" id="Password" class="form-input" formControlName="Password" placeholder="Password"/>
+                    <div *ngIf="singUpForm.controls.Password.invalid">
+                      <!--Please enter Password-->
+                  </div>
+                  </div>
+
+                  <div class="form-group">
+                    <input type="password" id="Password" class="form-input" formControlName="Password" placeholder="Repeat your password"/>
+                    <div *ngIf="singUpForm.controls.Password.invalid">
+                      <!--Please enter Password-->
+                  </div>
+                  </div>
+
+                  <div class="form-group">
+                    <input type="text" id="City" class="form-input" formControlName="City" placeholder="City"/>
+                    <div *ngIf="singUpForm.controls.City.invalid">
+                      <!--Please enter City-->
+                  </div>
+                  </div>
+
+                  <div class="form-group">
+                    <input type="string" id="PhoneNumber" class="form-input" formControlName="PhoneNumber" placeholder="Phone number"/>
+                    <div *ngIf="singUpForm.controls.PhoneNumber.invalid">
+                      <!--Please enter PhoneNumber-->
+                  </div>
+                  </div>
+
+                  <div class="form-group">
+                      <input type="submit" name="submit" id="submit" class="form-submit" value="Sign up"/>
+                  </div>
+              </form>
+              <p class="loginhere">
+                  Have already an account ? <a routerLink="/sing-in" class="loginhere-link">Login here</a>
+              </p>
+          </div>
       </div>
-    </div>
-  
-        <button mdbBtn color="info" outline="true" rounded="true" block="true" class="my-4 waves-effect z-depth-0" mdbWavesEffect
-          type="submit">Sign in</button>
-  
-        
-        <p>or sign up with:</p>
-  
-        <a type="button" class="light-blue-text mx-2">
-          <!--<mdb-icon fab icon="facebook"></mdb-icon>-->
-        </a>
-        <a type="button" class="light-blue-text mx-2">
-          <!--<mdb-icon fab icon="twitter"></mdb-icon>-->
-        </a>
-        <a type="button" class="light-blue-text mx-2">
-          <!--<mdb-icon fab icon="linkedin"></mdb-icon>-->
-        </a>
-        <a type="button" class="light-blue-text mx-2">
-          <!--<mdb-icon fab icon="heart"></mdb-icon>-->
-        </a>
-</form>
+  </section>
+
+</div>
+</div>
+</body>
