--- a/clover/src/app/app.component.html
+++ b/clover/src/app/app.component.html
@@ -12,7 +12,7 @@
         <a class="nav-link" routerLink="sing-in">Sing In</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="">Flights</a>
+        <a class="nav-link" routerLink="flights">Flights</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="car">Cars</a>
