--- a/clover/src/app/components/flights/flights.component.html
+++ b/clover/src/app/components/flights/flights.component.html
@@ -17,7 +17,8 @@
 	<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 		
 </head>
-<body>
+<body >
+	<div class="bg">
 	<h1>Flight Ticket Booking</h1>
 	<div class="main-agileinfo">
 		<div class="sap_tabs">			
@@ -254,11 +255,49 @@
 			</div>
 		</div>
 	</div>
-	<div class="footer-w3l">
-		<p class="agileinfo"> &copy; 2016 Flight Ticket Booking . All Rights Reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
+	
+
+
+
+</div>
+    <div class="conteiner">
+			<section class="ftco-section ftco-services">
+					<div class="container">
+						<div class="row">
+					  <div class="col-md-4 d-flex services align-self-stretch px-4 ftco-animate">
+						<div class="d-block services-wrap text-center">
+						  <div class="img" style="background-image: url(images/services-1.jpg);"></div>
+						  <div class="media-body py-4 px-3">
+							<h3 class="heading">Map Direction</h3>
+							<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+							<p><a href="#" class="btn btn-primary">Read more</a></p>
+						  </div>
+						</div>      
+					  </div>
+					  <div class="col-md-4 d-flex services align-self-stretch px-4 ftco-animate">
+						<div class="d-block services-wrap text-center">
+						  <div class="img" style="background-image: url(images/services-2.jpg);"></div>
+						  <div class="media-body py-4 px-3">
+							<h3 class="heading">Accomodation Services</h3>
+							<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+							<p><a href="#" class="btn btn-primary">Read more</a></p>
+						  </div>
+						</div>    
+					  </div>
+					  <div class="col-md-4 d-flex services align-self-stretch px-4 ftco-animate">
+						<div class="d-block services-wrap text-center">
+						  <div class="img" style="background-image: url(images/services-3.jpg);"></div>
+						  <div class="media-body py-4 px-3">
+							<h3 class="heading">Great Experience</h3>
+							<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+							<p><a href="#" class="btn btn-primary">Read more</a></p>
+						  </div>
+						</div>      
+					  </div>
+					</div>
+					</div>
+				</section>
+
 	</div>
-
-
-
 </body>
 </html>
