#AB10 - Car Component

--- a/clover/src/app/components/car/car.component.html
+++ b/clover/src/app/components/car/car.component.html
@@ -36,7 +36,7 @@
 			</div>	
 			
 			<div class="conteiner" >
-				<table class="table table-hover">
+				<!--<table class="table table-hover">
 					<thead class="table">
 						<tr>
 							<th scope="col">MARKA</th>
@@ -52,12 +52,63 @@
 							<td>{{car.year}}</td>
 							<td>{{car.pricePerDay}}$</td>
 						</tr>
-						
 					</tbody>
-					
 				</table>
-			</div>
+			</div>-->
 			
+			<div class="wrapper">
+				<p class="resp-tabs-list"> Rent a Car Services </p>
+				<div class="cols">
+						  <div class="col" ontouchstart="this.classList.toggle('hover');">
+							  <div class="container">
+								  <div class="front" style="background-image: url(https://unsplash.it/500/500/)">
+									  <div class="inner">
+										  <p>Diligord</p>
+							<span>Lorem ipsum</span>
+									  </div>
+								  </div>
+								  <div class="back">
+									  <div class="inner">
+										<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+									  </div>
+								  </div>
+							  </div>
+						  </div>
 
+						  <div class="col" ontouchstart="this.classList.toggle('hover');">
+							  <div class="container">
+								  <div class="front" style="background-image: url(https://unsplash.it/502/502/)">
+									  <div class="inner">
+										  <p>Rocogged</p>
+							<span>Lorem ipsum</span>
+									  </div>
+								  </div>
+								  <div class="back">
+									  <div class="inner">
+										  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+									  </div>
+								  </div>
+							  </div>
+						  </div>
+
+						  <div class="col" ontouchstart="this.classList.toggle('hover');">
+							<div class="container">
+								<div class="front" style="background-image: url(https://unsplash.it/502/502/)">
+									<div class="inner">
+										<p>Rocogged</p>
+						  <span>Lorem ipsum</span>
+									</div>
+								</div>
+								<div class="back">
+									<div class="inner">
+										<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+									</div>
+								</div>
+							</div>
+						</div>
+
+				</div>
+			</div>
 		</div>
+	</div>
 </body>
