--- a/clover/src/app/components/car/car.component.html
+++ b/clover/src/app/components/car/car.component.html
@@ -36,30 +36,10 @@
 			</div>	
 			
 			<div class="conteiner" >
-				<!--<table class="table table-hover">
-					<thead class="table">
-						<tr>
-							<th scope="col">MARKA</th>
-							<th scope="col">MODEL</th>
-							<th scope="col">GODINA</th>
-							<th scope="col">CENA ZA JEDAN DAN</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr *ngFor="let car of allCars">
-							<td>{{car.brand}}</td>
-							<td>{{car.model}}</td>
-							<td>{{car.year}}</td>
-							<td>{{car.pricePerDay}}$</td>
-						</tr>
-					</tbody>
-				</table>
-			</div>-->
-			
 			<div class="wrapper">
 				<p class="resp-tabs-list"> Rent a Car Services </p>
 				<div class="cols">
-						  <div class="col" ontouchstart="this.classList.toggle('hover');">
+						  <div routerLink="/rent-a-car" class="col" ontouchstart="this.classList.toggle('hover');">
 							  <div class="container">
 								  <div class="front" style="background-image: url(https://unsplash.it/500/500/)">
 									  <div class="inner">
@@ -75,7 +55,7 @@
 							  </div>
 						  </div>
 
-						  <div class="col" ontouchstart="this.classList.toggle('hover');">
+						  <div routerLink="/rent-a-car" class="col" ontouchstart="this.classList.toggle('hover');">
 							  <div class="container">
 								  <div class="front" style="background-image: url(https://unsplash.it/502/502/)">
 									  <div class="inner">
@@ -91,7 +71,7 @@
 							  </div>
 						  </div>
 
-						  <div class="col" ontouchstart="this.classList.toggle('hover');">
+						  <div routerLink="/rent-a-car" class="col" ontouchstart="this.classList.toggle('hover');">
 							<div class="container">
 								<div class="front" style="background-image: url(https://unsplash.it/502/502/)">
 									<div class="inner">
