--- a/clover/src/app/components/car/car.component.css
+++ b/clover/src/app/components/car/car.component.css
@@ -32,8 +32,8 @@ background-position: center;
 }
 
 .main-agileinfo{
-margin-left:50px;
-margin-top: 50px;
+margin-left:6%;
+margin-top: 5%;
 width: 300px;
 }
 
