--- a/clover/src/app/components/car/car.component.css
+++ b/clover/src/app/components/car/car.component.css
@@ -127,6 +127,7 @@ margin-bottom:10px;
     background:rgba(137, 153, 158, 0.8);
     padding: 25px;
     border-radius: 10px;
+    position: relative;
 }
 
 .table{
