--- a/clover/src/app/components/sing-in/sing-up/sing-up.component.html
+++ b/clover/src/app/components/sing-in/sing-up/sing-up.component.html
@@ -1,12 +1,10 @@
-<body>
-  <div class="bg">
-<div class="main">
 
   <section class="signup">
-      <div class="container">
-          <div class="signup-content">
               <form [formGroup]="singUpForm" (ngSubmit)="onSubmit()" method="POST" id="signup-form" class="signup-form">
-                <h2 class="form-title">Create account</h2>
+                <div>
+                  <button class="btn" (click)="sendMessage()"><span>Sing in</span></button>
+                  <button class="btn"><span>Register</span></button>
+                </div>
 
                   <div class="form-group">
                       <input type="text" id="FirstName" class="form-input" formControlName="FirstName" placeholder="Your Name"/>
@@ -54,13 +52,4 @@
                       <input type="submit" name="submit" id="submit" class="form-submit" value="Sign up"/>
                   </div>
               </form>
-              <p class="loginhere">
-                  Have already an account ? <a routerLink="/sing-in" class="loginhere-link">Login here</a>
-              </p>
-          </div>
-      </div>
   </section>
-
-</div>
-</div>
-</body>
