Dotata tebela za ispis letova

--- a/clover/src/app/components/flights/flights.component.html
+++ b/clover/src/app/components/flights/flights.component.html
@@ -86,7 +86,7 @@
 										</div>
 										<div class="col-md-3">
 											<div class="form-btn">
-												<button class="submit-btn">Show flights</button>
+												<button routerLink="/book-a-flight" class="submit-btn">Show flights</button>
 											</div>
 										</div>
 									</div>
@@ -116,7 +116,7 @@
 										  </div>
 									  </div>
 			
-									  <div routerLink="/rent-a-car" class="col" ontouchstart="this.classList.toggle('hover');">
+									  <div routerLink="/book-a-flight" class="col" ontouchstart="this.classList.toggle('hover');">
 										  <div class="container">
 											  <div class="front" style="background-image: url(https://unsplash.it/502/502/)">
 												  <div class="inner">
